fix: JChunk qodana quality check fixed